# garagelight

./: .gitignore  .gitmodules  Cargo.toml  README.md  ble.py  boot.py  build.sh  deploy.sh  main.py  micropython_ota.py  rust-toolchain.toml  secrets.py
aioble/: central.py  client.py  device.py  l2cap.py  peripheral.py  security.py  server.py
src/: main.rs  wifi.rs
