[package]
name = "garagebeam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyw43 = { path = "lib/cyw43/", features = ["defmt"]}
embassy-executor = { version = "0.1.1",  features = ["defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0",  features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0",  features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver"] }
embassy-net = { version = "0.1.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "pool-16", "unstable-traits", "nightly", "udp"] }
atomic-polyfill = "1.0"
static_cell = "1.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
futures = { version = "0.3", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }

embedded-hal-1 = { package = "embedded-hal", version = "1.0.0-alpha.9" }
embedded-hal-async = { version = "0.2.0-alpha.0" }
embedded-io = { version = "0.4.0", features = ["async", "defmt"] }
heapless = "0.7"

embedded-nal-async = "0.3.0"


[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "1b8c0733e690108994654c43387e438c2f64cfaa" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "1b8c0733e690108994654c43387e438c2f64cfaa" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "1b8c0733e690108994654c43387e438c2f64cfaa" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "1b8c0733e690108994654c43387e438c2f64cfaa" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "1b8c0733e690108994654c43387e438c2f64cfaa" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "1b8c0733e690108994654c43387e438c2f64cfaa" }

[profile.dev]
debug = 2
debug-assertions = true
opt-level = 1
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
